[package]
name = "stereo_vision"
version = "0.1.0"
edition = "2024"

[[bin]]
name="stereo_vision"
path="src/main.rs"

[dependencies]
opencv = {version="*", features= ["clang-runtime"]}
rclrs = "0.6"
anyhow = {version = "1", features = ["backtrace"]}
sensor_msgs = "*"
builtin_interfaces = "*"

[package.metadata.ros]
install_to_share = ["launch"]

